--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -1,11 +1,10 @@
 .home-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh; /* Ensure full screen height */
-    background-image: url('bg_img.png');
-    background-size: cover;
-    background-position: center;
-  }
-  
+ /* Enables flexbox layout */
+  flex-direction: column; /* Stacks child elements vertically */
+  align-items: center; /* Centers child elements horizontally */
+  justify-content: center; /* Centers child elements vertically */
+  min-height: 100vh; /* Ensures the container takes up the full viewport height */
+  background-image: url('bg_img.png'); /* Sets the background image */
+  background-size: cover; /* Ensures the image covers the entire container */
+  background-position: center; /* Centers the image within the container */
+}
