--- a/client/src/pages/home.css
+++ b/client/src/pages/home.css
@@ -4,7 +4,7 @@
   align-items: center; /* Centers child elements horizontally */
   justify-content: center; /* Centers child elements vertically */
   min-height: 100vh; /* Ensures the container takes up the full viewport height */
-  background-image: url('bg_img.png'); /* Sets the background image */
+  /* Sets the background image */
   background-size: cover; /* Ensures the image covers the entire container */
   background-position: center; /* Centers the image within the container */
 }
